[metadata]
name = zdrzalik-image-display
version = 0.0.5
author = Zdrzalik Przemyslaw
author_email = zdrzalikprzemyslaw@gmail.com
description = Package to show black image with low brightness and white image with max brightness
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZdrzalikPrzemyslaw/ShowImage


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src